vbnc/vbnc/tests/Errors/30455-3.vb
Module ArgumentTypeInference
    Sub a(Of T)(ByVal b As Integer, ByVal bc As Integer)
        a(1)
    End Sub
End Module